.antlr/arcv2Parser.java
// Generated from /home/runge/semester-project/P4-Concurrent-Arduino/arcv2.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class arcv2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, WS=5, NUMBER=6, PINDIGIT=7, INT=8, BOOL=9, 
		TYPE_TYPEOPERATOR=10, PARAMETER_DECLARATION=11, COMMENTS=12, LINECOMMENTS=13, 
		RETURN=14, WHILE=15, IT=16, FOR=17, IN=18, WHEN=19, VOID=20, SETUP=21, 
		ELSE=22, DEFINE=23, EVERY=24, TASK=25, PINMODE=26, INPUT=27, OUTPUT=28, 
		SLEEP=29, YIELD=30, ARDUINOFUNCTIONS=31, INPUT_PULLUP=32, LED_BUILTIN=33, 
		MULTI=34, DIVI=35, PLUS=36, MINUS=37, RELATIONEQOPERATORS=38, RELATIONOPERATORS=39, 
		AND=40, OR=41, NOT=42, XOR=43, IDENTIFIER=44, ASSIGNMENT=45, SEPERATOR=46, 
		STARTPARANTHESES=47, ENDPARANTHESES=48, STARTSQUAREBRACKET=49, ENDSQUAREBRACKET=50, 
		STARTCURLYBRACKET=51, ENDCURLYBRACKET=52;
	public static final int
		RULE_start = 0, RULE_declarations = 1, RULE_statements = 2, RULE_expression = 3;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "declarations", "statements", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'#'", "'pin'", "'if'", null, null, null, null, null, null, 
			null, null, null, "'return'", "'while'", "'it'", "'for'", "'in'", "'when'", 
			"'void'", "'setup'", "'else'", "'define'", "'every'", "'task'", "'pinmode'", 
			"'INPUT'", "'OUTPUT'", "'sleep'", "'yield'", null, "'INPUT_PULLUP'", 
			"'LED_BUILTIN'", "'*'", "'/'", "'+'", "'-'", null, null, "'and'", "'or'", 
			"'not'", "'xor'", null, "'='", "','", "'('", "')'", "'['", "']'", "'{'", 
			"'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "WS", "NUMBER", "PINDIGIT", "INT", "BOOL", 
			"TYPE_TYPEOPERATOR", "PARAMETER_DECLARATION", "COMMENTS", "LINECOMMENTS", 
			"RETURN", "WHILE", "IT", "FOR", "IN", "WHEN", "VOID", "SETUP", "ELSE", 
			"DEFINE", "EVERY", "TASK", "PINMODE", "INPUT", "OUTPUT", "SLEEP", "YIELD", 
			"ARDUINOFUNCTIONS", "INPUT_PULLUP", "LED_BUILTIN", "MULTI", "DIVI", "PLUS", 
			"MINUS", "RELATIONEQOPERATORS", "RELATIONOPERATORS", "AND", "OR", "NOT", 
			"XOR", "IDENTIFIER", "ASSIGNMENT", "SEPERATOR", "STARTPARANTHESES", "ENDPARANTHESES", 
			"STARTSQUAREBRACKET", "ENDSQUAREBRACKET", "STARTCURLYBRACKET", "ENDCURLYBRACKET"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "arcv2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public arcv2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(8);
			declarations();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
	 
		public DeclarationsContext() { }
		public void copyFrom(DeclarationsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Variable_declarationContext extends DeclarationsContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode TYPE_TYPEOPERATOR() { return getToken(arcv2Parser.TYPE_TYPEOPERATOR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(arcv2Parser.IDENTIFIER, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(arcv2Parser.ASSIGNMENT, 0); }
		public TerminalNode STARTSQUAREBRACKET() { return getToken(arcv2Parser.STARTSQUAREBRACKET, 0); }
		public TerminalNode ENDSQUAREBRACKET() { return getToken(arcv2Parser.ENDSQUAREBRACKET, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> SEPERATOR() { return getTokens(arcv2Parser.SEPERATOR); }
		public TerminalNode SEPERATOR(int i) {
			return getToken(arcv2Parser.SEPERATOR, i);
		}
		public Variable_declarationContext(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitVariable_declaration(this);
		}
	}
	public static class Pin_declarationContext extends DeclarationsContext {
		public TerminalNode IDENTIFIER() { return getToken(arcv2Parser.IDENTIFIER, 0); }
		public TerminalNode STARTPARANTHESES() { return getToken(arcv2Parser.STARTPARANTHESES, 0); }
		public TerminalNode PINDIGIT() { return getToken(arcv2Parser.PINDIGIT, 0); }
		public TerminalNode SEPERATOR() { return getToken(arcv2Parser.SEPERATOR, 0); }
		public TerminalNode ENDPARANTHESES() { return getToken(arcv2Parser.ENDPARANTHESES, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode INPUT() { return getToken(arcv2Parser.INPUT, 0); }
		public TerminalNode OUTPUT() { return getToken(arcv2Parser.OUTPUT, 0); }
		public Pin_declarationContext(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterPin_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitPin_declaration(this);
		}
	}
	public static class Empty_declarationContext extends DeclarationsContext {
		public Empty_declarationContext(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterEmpty_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitEmpty_declaration(this);
		}
	}
	public static class Task_declarationsContext extends DeclarationsContext {
		public List<TerminalNode> TASK() { return getTokens(arcv2Parser.TASK); }
		public TerminalNode TASK(int i) {
			return getToken(arcv2Parser.TASK, i);
		}
		public List<TerminalNode> STARTCURLYBRACKET() { return getTokens(arcv2Parser.STARTCURLYBRACKET); }
		public TerminalNode STARTCURLYBRACKET(int i) {
			return getToken(arcv2Parser.STARTCURLYBRACKET, i);
		}
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public List<TerminalNode> ENDCURLYBRACKET() { return getTokens(arcv2Parser.ENDCURLYBRACKET); }
		public TerminalNode ENDCURLYBRACKET(int i) {
			return getToken(arcv2Parser.ENDCURLYBRACKET, i);
		}
		public List<TerminalNode> STARTPARANTHESES() { return getTokens(arcv2Parser.STARTPARANTHESES); }
		public TerminalNode STARTPARANTHESES(int i) {
			return getToken(arcv2Parser.STARTPARANTHESES, i);
		}
		public List<TerminalNode> ENDPARANTHESES() { return getTokens(arcv2Parser.ENDPARANTHESES); }
		public TerminalNode ENDPARANTHESES(int i) {
			return getToken(arcv2Parser.ENDPARANTHESES, i);
		}
		public List<TerminalNode> EVERY() { return getTokens(arcv2Parser.EVERY); }
		public TerminalNode EVERY(int i) {
			return getToken(arcv2Parser.EVERY, i);
		}
		public List<TerminalNode> INT() { return getTokens(arcv2Parser.INT); }
		public TerminalNode INT(int i) {
			return getToken(arcv2Parser.INT, i);
		}
		public List<TerminalNode> WHEN() { return getTokens(arcv2Parser.WHEN); }
		public TerminalNode WHEN(int i) {
			return getToken(arcv2Parser.WHEN, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> TYPE_TYPEOPERATOR() { return getTokens(arcv2Parser.TYPE_TYPEOPERATOR); }
		public TerminalNode TYPE_TYPEOPERATOR(int i) {
			return getToken(arcv2Parser.TYPE_TYPEOPERATOR, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(arcv2Parser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(arcv2Parser.IDENTIFIER, i);
		}
		public List<TerminalNode> SEPERATOR() { return getTokens(arcv2Parser.SEPERATOR); }
		public TerminalNode SEPERATOR(int i) {
			return getToken(arcv2Parser.SEPERATOR, i);
		}
		public Task_declarationsContext(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterTask_declarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitTask_declarations(this);
		}
	}
	public static class Function_declarationContext extends DeclarationsContext {
		public List<TerminalNode> TYPE_TYPEOPERATOR() { return getTokens(arcv2Parser.TYPE_TYPEOPERATOR); }
		public TerminalNode TYPE_TYPEOPERATOR(int i) {
			return getToken(arcv2Parser.TYPE_TYPEOPERATOR, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(arcv2Parser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(arcv2Parser.IDENTIFIER, i);
		}
		public TerminalNode STARTPARANTHESES() { return getToken(arcv2Parser.STARTPARANTHESES, 0); }
		public TerminalNode ENDPARANTHESES() { return getToken(arcv2Parser.ENDPARANTHESES, 0); }
		public TerminalNode STARTCURLYBRACKET() { return getToken(arcv2Parser.STARTCURLYBRACKET, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode ENDCURLYBRACKET() { return getToken(arcv2Parser.ENDCURLYBRACKET, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public List<TerminalNode> SEPERATOR() { return getTokens(arcv2Parser.SEPERATOR); }
		public TerminalNode SEPERATOR(int i) {
			return getToken(arcv2Parser.SEPERATOR, i);
		}
		public Function_declarationContext(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterFunction_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitFunction_declaration(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new Function_declarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(10);
				match(TYPE_TYPEOPERATOR);
				setState(11);
				match(IDENTIFIER);
				setState(12);
				match(STARTPARANTHESES);
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TYPE_TYPEOPERATOR) {
					{
					setState(13);
					match(TYPE_TYPEOPERATOR);
					setState(14);
					match(IDENTIFIER);
					setState(20);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==SEPERATOR) {
						{
						{
						setState(15);
						match(SEPERATOR);
						setState(16);
						match(TYPE_TYPEOPERATOR);
						setState(17);
						match(IDENTIFIER);
						}
						}
						setState(22);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(25);
				match(ENDPARANTHESES);
				setState(26);
				match(STARTCURLYBRACKET);
				setState(27);
				statements();
				setState(28);
				match(ENDCURLYBRACKET);
				setState(29);
				declarations();
				}
				break;
			case 2:
				_localctx = new Variable_declarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(31);
				match(TYPE_TYPEOPERATOR);
				setState(32);
				match(IDENTIFIER);
				setState(33);
				match(ASSIGNMENT);
				setState(47);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STARTSQUAREBRACKET:
					{
					setState(34);
					match(STARTSQUAREBRACKET);
					setState(43);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << BOOL) | (1L << ARDUINOFUNCTIONS) | (1L << NOT) | (1L << IDENTIFIER) | (1L << STARTPARANTHESES))) != 0)) {
						{
						setState(35);
						expression(0);
						setState(40);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==SEPERATOR) {
							{
							{
							setState(36);
							match(SEPERATOR);
							setState(37);
							expression(0);
							}
							}
							setState(42);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
					}

					setState(45);
					match(ENDSQUAREBRACKET);
					}
					break;
				case NUMBER:
				case BOOL:
				case ARDUINOFUNCTIONS:
				case NOT:
				case IDENTIFIER:
				case STARTPARANTHESES:
					{
					setState(46);
					expression(0);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(49);
				match(T__0);
				}
				setState(51);
				declarations();
				}
				break;
			case 3:
				_localctx = new Pin_declarationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				match(T__1);
				setState(53);
				match(T__2);
				setState(54);
				match(IDENTIFIER);
				setState(55);
				match(STARTPARANTHESES);
				setState(56);
				match(PINDIGIT);
				setState(57);
				match(SEPERATOR);
				setState(58);
				_la = _input.LA(1);
				if ( !(_la==INPUT || _la==OUTPUT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(59);
				match(ENDPARANTHESES);
				setState(60);
				declarations();
				}
				break;
			case 4:
				_localctx = new Task_declarationsContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TASK) {
					{
					{
					setState(61);
					match(TASK);
					setState(76);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==STARTPARANTHESES) {
						{
						setState(62);
						match(STARTPARANTHESES);
						setState(73);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==TYPE_TYPEOPERATOR) {
							{
							setState(63);
							match(TYPE_TYPEOPERATOR);
							setState(64);
							match(IDENTIFIER);
							setState(70);
							_errHandler.sync(this);
							_la = _input.LA(1);
							while (_la==SEPERATOR) {
								{
								{
								setState(65);
								match(SEPERATOR);
								setState(66);
								match(TYPE_TYPEOPERATOR);
								setState(67);
								match(IDENTIFIER);
								}
								}
								setState(72);
								_errHandler.sync(this);
								_la = _input.LA(1);
							}
							}
						}

						setState(75);
						match(ENDPARANTHESES);
						}
					}

					setState(85);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case EVERY:
						{
						{
						setState(78);
						match(EVERY);
						setState(79);
						match(INT);
						}
						}
						break;
					case WHEN:
						{
						{
						setState(80);
						match(WHEN);
						setState(81);
						match(STARTPARANTHESES);
						setState(82);
						expression(0);
						setState(83);
						match(ENDPARANTHESES);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(87);
					match(STARTCURLYBRACKET);
					setState(88);
					statements();
					setState(89);
					match(ENDCURLYBRACKET);
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 5:
				_localctx = new Empty_declarationContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	 
		public StatementsContext() { }
		public void copyFrom(StatementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class If_else_statementContext extends StatementsContext {
		public TerminalNode STARTPARANTHESES() { return getToken(arcv2Parser.STARTPARANTHESES, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ENDPARANTHESES() { return getToken(arcv2Parser.ENDPARANTHESES, 0); }
		public List<TerminalNode> STARTCURLYBRACKET() { return getTokens(arcv2Parser.STARTCURLYBRACKET); }
		public TerminalNode STARTCURLYBRACKET(int i) {
			return getToken(arcv2Parser.STARTCURLYBRACKET, i);
		}
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public List<TerminalNode> ENDCURLYBRACKET() { return getTokens(arcv2Parser.ENDCURLYBRACKET); }
		public TerminalNode ENDCURLYBRACKET(int i) {
			return getToken(arcv2Parser.ENDCURLYBRACKET, i);
		}
		public TerminalNode ELSE() { return getToken(arcv2Parser.ELSE, 0); }
		public If_else_statementContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterIf_else_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitIf_else_statement(this);
		}
	}
	public static class Variable_declaration_statementContext extends StatementsContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode TYPE_TYPEOPERATOR() { return getToken(arcv2Parser.TYPE_TYPEOPERATOR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(arcv2Parser.IDENTIFIER, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(arcv2Parser.ASSIGNMENT, 0); }
		public TerminalNode STARTSQUAREBRACKET() { return getToken(arcv2Parser.STARTSQUAREBRACKET, 0); }
		public TerminalNode ENDSQUAREBRACKET() { return getToken(arcv2Parser.ENDSQUAREBRACKET, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> SEPERATOR() { return getTokens(arcv2Parser.SEPERATOR); }
		public TerminalNode SEPERATOR(int i) {
			return getToken(arcv2Parser.SEPERATOR, i);
		}
		public Variable_declaration_statementContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterVariable_declaration_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitVariable_declaration_statement(this);
		}
	}
	public static class Assignment_statementContext extends StatementsContext {
		public TerminalNode IDENTIFIER() { return getToken(arcv2Parser.IDENTIFIER, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(arcv2Parser.ASSIGNMENT, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public List<TerminalNode> STARTSQUAREBRACKET() { return getTokens(arcv2Parser.STARTSQUAREBRACKET); }
		public TerminalNode STARTSQUAREBRACKET(int i) {
			return getToken(arcv2Parser.STARTSQUAREBRACKET, i);
		}
		public List<TerminalNode> ENDSQUAREBRACKET() { return getTokens(arcv2Parser.ENDSQUAREBRACKET); }
		public TerminalNode ENDSQUAREBRACKET(int i) {
			return getToken(arcv2Parser.ENDSQUAREBRACKET, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode NUMBER() { return getToken(arcv2Parser.NUMBER, 0); }
		public List<TerminalNode> SEPERATOR() { return getTokens(arcv2Parser.SEPERATOR); }
		public TerminalNode SEPERATOR(int i) {
			return getToken(arcv2Parser.SEPERATOR, i);
		}
		public Assignment_statementContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterAssignment_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitAssignment_statement(this);
		}
	}
	public static class Forloop_statementContext extends StatementsContext {
		public TerminalNode FOR() { return getToken(arcv2Parser.FOR, 0); }
		public TerminalNode STARTPARANTHESES() { return getToken(arcv2Parser.STARTPARANTHESES, 0); }
		public TerminalNode TYPE_TYPEOPERATOR() { return getToken(arcv2Parser.TYPE_TYPEOPERATOR, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(arcv2Parser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(arcv2Parser.IDENTIFIER, i);
		}
		public TerminalNode IN() { return getToken(arcv2Parser.IN, 0); }
		public TerminalNode ENDPARANTHESES() { return getToken(arcv2Parser.ENDPARANTHESES, 0); }
		public TerminalNode STARTCURLYBRACKET() { return getToken(arcv2Parser.STARTCURLYBRACKET, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public TerminalNode ENDCURLYBRACKET() { return getToken(arcv2Parser.ENDCURLYBRACKET, 0); }
		public Forloop_statementContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterForloop_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitForloop_statement(this);
		}
	}
	public static class Whileloop_statementContext extends StatementsContext {
		public TerminalNode WHILE() { return getToken(arcv2Parser.WHILE, 0); }
		public TerminalNode STARTPARANTHESES() { return getToken(arcv2Parser.STARTPARANTHESES, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ENDPARANTHESES() { return getToken(arcv2Parser.ENDPARANTHESES, 0); }
		public TerminalNode STARTCURLYBRACKET() { return getToken(arcv2Parser.STARTCURLYBRACKET, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public TerminalNode ENDCURLYBRACKET() { return getToken(arcv2Parser.ENDCURLYBRACKET, 0); }
		public Whileloop_statementContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterWhileloop_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitWhileloop_statement(this);
		}
	}
	public static class Return_statementContext extends StatementsContext {
		public TerminalNode RETURN() { return getToken(arcv2Parser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public Return_statementContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterReturn_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitReturn_statement(this);
		}
	}
	public static class Empty_statementContext extends StatementsContext {
		public Empty_statementContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).enterEmpty_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof arcv2Listener ) ((arcv2Listener)listener).exitEmpty_statement(this);
		}
	}
